// XNAGameEngine | Hypo Klarich | 3/11/2014								//
// -CollisionManager.cs -Game1.cs -GameInterface.cs -GameObject.cs		//
// -Time: 11am - 1:38pm = 2:38											//
// -Notes: Collision is up and running. This is an un-optimized version //
// but is good enough for our first few projects.						//
//////////////////////////////////////////////////////////////////////////

XNAGameEngine | Eric Flores | 3/19/2014
-Assets -GameStateManager.cs -GameScreen.cs
-Time 10:00 pm - 10:40 am = :40
-Notes: Added art to Assets folder. Added 2 new class GameStateManager.cs and
GameScreen.cs just setting up and messing around with ideas neither works with
the code YET.

XNAGameEngine | Hypo Klarich | 3/15/2014
-CollisionManager.cs -Debug.cs -Gaame1.cs -GameObjects.cs -PhysicsManager.cs
-Time 11:00 am - 11:20 am = :20
-Notes: Worked on collision no changes...

XNAGameEngine | Michael | 3/14/2014
-Event.cs - GameInterface.cs - InputManger.cs - Mouse.cs
-Time 6:00pm - 12:39 am = 6:39 (With Long Breaks)
-Notes: Cleaned up Event and InputManager class. Event is now called InputEvent
and is strictly for Keyboard input. Need better direction (Understanding)
on how we will be using the mouse. If it is just point and click, there is 
not much to it (GameMouse will suffice).

XNAGameEngine | Hypo Klarich | 3/13/2014
-CollisionManager.cs -Debug.cs -Gaame1.cs -GameObjects.cs -PhysicsManager.cs
-Time 9:30 am - 11:12 am = 1:42
-Notes: Drasticaly improved the collision, still some problems that have been
identified but not solved. Made changes to the debugger so it would no longer 
need a position, that is calculated and stored staticly. 

XNAGameEngine | Michael Villar | 3/13/2014
-Game1.cs - GameInterface.cs - Mouse.cs - InputManger.cs (NEW)
-Time 10:30 pm - 1:16 am = 2:44
-Notes: Created an InputManager class. Able to add different events
in the GameInterface class with it. Also placed GameMouse within it.
Still need to clean it up and review design. 
